@@ -1,24 +1,23 @@
-lib_LTLIBRARIES = libldmgreeter.la
+lib_LTLIBRARIES = libldmgreeter-gobject.la
 
-libldmgreeterinclude_HEADERS = \
+libldmgreeter_gobjectinclude_HEADERS = \
 	greeter.h \
 	language.h \
 	layout.h \
 	session.h \
 	user.h
+libldmgreeter_gobjectincludedir=$(includedir)/lightdm-gobject-0/lightdm
 
-libldmgreeter_la_LIBADD = $(LIBLDMGREETER_LIBS)
-libldmgreeter_la_CFLAGS = $(LIBLDMGREETER_CFLAGS) \
+libldmgreeter_gobject_la_LIBADD = $(LIBLDMGREETER_GOBJECT_LIBS)
+libldmgreeter_gobject_la_CFLAGS = $(LIBLDMGREETER_GOBJECT_CFLAGS) \
 	-DXSESSIONS_DIR=\"$(XSESSIONS_DIR)\"
 
-libldmgreeter_la_SOURCES= \
+libldmgreeter_gobject_la_SOURCES= \
 	greeter.c \
 	language.c \
 	layout.c \
 	session.c \
 	user.c
-
-libldmgreeterincludedir=$(includedir)/lightdm-0/lightdm
 
 if HAVE_INTROSPECTION
 
@@ -28,11 +27,11 @@ INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)
 
 INTROSPECTION_GIRS = LightDMGreeter-0.gir
 
-LightDMGreeter-0.gir: libldmgreeter.la
+LightDMGreeter-0.gir: libldmgreeter-gobject.la
 LightDMGreeter_0_gir_INCLUDES = GObject-2.0
 LightDMGreeter_0_gir_CFLAGS = $(INCLUDES)
-LightDMGreeter_0_gir_LIBS = libldmgreeter.la
-LightDMGreeter_0_gir_FILES = $(libldmgreeter_la_SOURCES)
+LightDMGreeter_0_gir_LIBS = libldmgreeter-gobject.la
+LightDMGreeter_0_gir_FILES = $(libldmgreeter_gobject_la_SOURCES)
 
 girdir = $(datadir)/gir-1.0
 gir_DATA = LightDMGreeter-0.gir
@@ -43,10 +42,10 @@ typelib_DATA = LightDMGreeter-0.typelib
 endif
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libldmgreeter-0.pc
+pkgconfig_DATA = libldmgreeter-gobject-0.pc
 
 DISTCLEANFILES = \
 	Makefile.in \
-	libldmgreeter-0.pc \
+	$(pkgconfig_DATA) \
 	$(gir_DATA) \
 	$(typelib_DATA)
