@@ -1,6 +1,7 @@
 Overview of changes in lightdm 0.2.1
 
     * Use "lightdm" as default PAM service and make it configurable
+    * Rename libldmgreeter to libldmgreeter-gobject
 
 Overview of changes in lightdm 0.2.0
 
